# Wingman

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  action.yml  deny.toml  plan.md
.github/workflows/: ci.yml  release.yml
crates/arccode-autonomous/: Cargo.toml
crates/arccode-autonomous/src/: acceptance.rs  approval.rs  automerge.rs  child_process.rs  concurrency.rs  daemon.rs  dashboard.rs  escalation.rs  estimate.rs  eval.rs  feedback.rs  grounding.rs  handoff.rs  interject.rs  ipc.rs  knowledge.rs  learning.rs  lib.rs  manager.rs  model.rs  notify.rs  orchestrator.rs  pipeline.rs  planner.rs  pr.rs  provider_support.rs  refine.rs  reporting.rs  role.rs  sandbox.rs  security.rs  skillpack.rs  store.rs  toolsynth.rs  voice.rs  watcher.rs  webhook.rs  worker.rs  worktree.rs
crates/arccode-autonomous/src/prompts/: designer.md  developer.md  manager-planner.md  manager.md  merge-fixer.md  refactorer.md  reviewer.md  tester.md
crates/arccode-autonomous/src/tools/: abort_task.rs  add_task.rs  assign_task.rs  finalize_task.rs  message_agent.rs  mod.rs  reassign_task.rs  run_acceptance.rs
crates/arccode-cli/: Cargo.toml
crates/arccode-cli/src/: cli.rs  login.rs  main.rs  mcp_adapter.rs  mcp_registry.rs  runtime.rs
crates/arccode-cli/src/commands/: batch.rs  checkpoint.rs  cost.rs  diff.rs  diff_annotate.rs  discover.rs  headless.rs  init.rs  knows.rs  login.rs  mcp_serve.rs  memory.rs  mod.rs  pilot.rs  pilot_watch_tui.rs  review.rs  review_multi.rs  schedule.rs  session.rs  skill.rs  stats.rs  worker.rs  worktree.rs
crates/arccode-config/: Cargo.toml
crates/arccode-config/src/: lib.rs  secrets.rs
crates/arccode-learn/: Cargo.toml
crates/arccode-learn/src/: extract.rs  hooks.rs  lib.rs  memory.rs  redact.rs  session_index.rs  stats.rs
crates/arccode-mcp/: Cargo.toml
crates/arccode-mcp/src/: lib.rs
crates/arccode-rag/: Cargo.toml
crates/arccode-rag/src/: chunker.rs  embedder.rs  indexer.rs  lib.rs  store.rs
crates/arccode-skills/: Cargo.toml
crates/arccode-skills/src/: lib.rs
crates/arccode-tools/: Cargo.toml
crates/arccode-tools/src/: ctx.rs  lib.rs  registry.rs
crates/arccode-tools/src/builtin/: apply_patch.rs  check_diagnostics.rs  edit_file.rs  edit_symbol.rs  find_symbol.rs  invoke_skill.rs  mod.rs  outline.rs  present_plan.rs  read_file.rs  run_shell.rs  semantic_search.rs  spawn_subagent.rs  task_complete.rs  web_fetch.rs  web_search.rs
crates/arccode-ts/: Cargo.toml
crates/arccode-tui/: Cargo.toml
crates/arccode-tui/src/: app.rs  attachments.rs  lib.rs  theme.rs  usage_store.rs
crates/arccode-tui/src/modal/: diff_preview.rs  file_picker.rs  help.rs  login.rs  mcp.rs  mod.rs  model_picker.rs  params.rs  session_picker.rs  skill_vars.rs  skills.rs  usage.rs
crates/arccode-tui/src/widgets/: composer.rs  file_tree.rs  mod.rs  slash_suggest.rs  status.rs  transcript.rs  welcome.rs
crates/wingman-autonomous/: Cargo.toml
crates/wingman-browser/: Cargo.toml
crates/wingman-browser/src/: lib.rs
crates/wingman-cli/: Cargo.toml
crates/wingman-cli/src/: cli.rs  git_auto.rs  logging.rs  login.rs  main.rs  mcp_adapter.rs  mcp_registry.rs  oauth.rs  runtime.rs  shutdown.rs
crates/wingman-cli/src/commands/: attest.rs  batch.rs  bench.rs  checkpoint.rs  config.rs  cost.rs  diff.rs  diff_annotate.rs  discover.rs  distill.rs  explain.rs  headless.rs  indexd.rs  init.rs  knows.rs  login.rs  mcp_serve.rs  memory.rs  mod.rs  pilot.rs  pilot_intake.rs  pilot_watch_tui.rs  pr.rs  review.rs  review_multi.rs  rewind.rs  router.rs  schedule.rs  session.rs  skill.rs  spec.rs  tour.rs  worker.rs  worktree.rs
crates/wingman-cli/tests/: smoke.rs
crates/wingman-config/: Cargo.toml
crates/wingman-core/: Cargo.toml
crates/wingman-core/src/: agent.rs  checkpoint.rs  error.rs  lib.rs  message.rs  pricing.rs  provider.rs  stream.rs  tokens.rs  tool.rs  usage.rs
crates/wingman-learn/: Cargo.toml
crates/wingman-learn/src/: distill.rs  extract.rs  hooks.rs  lib.rs  memory.rs  proposal.rs  session_index.rs  staleness.rs  stats.rs
crates/wingman-lsp/: Cargo.toml
crates/wingman-lsp/src/: client.rs  edit.rs  lib.rs  server.rs
crates/wingman-mcp/: Cargo.toml
crates/wingman-mcp/src/: lib.rs
crates/wingman-providers/: Cargo.toml
crates/wingman-providers/src/: anthropic.rs  chatgpt.rs  cohere.rs  gemini.rs  lib.rs  openai_compat.rs  probe.rs  retry.rs  watsonx.rs
crates/wingman-rag/: Cargo.toml
crates/wingman-session/: Cargo.toml
crates/wingman-session/src/: lib.rs
crates/wingman-skills/: Cargo.toml
crates/wingman-skills/src/: lib.rs
crates/wingman-tools/: Cargo.toml
crates/wingman-tools/src/: ctx.rs  lib.rs  prefetch.rs  registry.rs
crates/wingman-tools/src/builtin/: apply_patch.rs  edit_file.rs  edit_symbol.rs  find_symbol.rs  forget_memory.rs  glob_tool.rs  grep_tool.rs  invoke_skill.rs  list_dir.rs  lsp_tools.rs  mod.rs  outline.rs  present_plan.rs  read_file.rs  read_session.rs  recall_memory.rs  recall_session.rs  run_shell.rs  save_memory.rs  semantic_search.rs  spawn_subagent.rs  task_complete.rs  update_tasks.rs  web_fetch.rs  web_search.rs  who_calls.rs  write_file.rs
crates/wingman-tools/tests/: agent_loop_integration.rs
crates/wingman-ts/: Cargo.toml
crates/wingman-ts/src/: highlight.rs  parse.rs
crates/wingman-tui/: Cargo.toml
crates/wingman-tui/src/: app.rs  lib.rs  theme.rs  usage_store.rs
crates/wingman-tui/src/modal/: file_picker.rs  help.rs  login.rs  mcp.rs  mod.rs  mode_picker.rs  model_picker.rs  session_picker.rs  skills.rs  usage.rs
crates/wingman-tui/src/widgets/: mod.rs  slash_suggest.rs  status.rs  tasks.rs  transcript.rs  welcome.rs
docs/: ARCHITECTURE.md  AUTONOMOUS-MODE.md  CI.md  DEPENDENCIES.md  DIFFERENTIATION.md  INDEX.md  LEARNING-LOOP.md  LSP.md  PACKAGING.md  ROADMAP-STATUS.md  SDK.md  TOOLS.md  TREE-SITTER.md  WATCH-UX-ENHANCEMENTS.md
editors/vscode/: README.md  package.json  tsconfig.json
scripts/: install.sh  stamp-winget.ps1
website/: README.md  package-lock.json  package.json  pnpm-lock.yaml
website-soon/: README.md  package-lock.json  package.json
(+119 files in other folders)
