[workspace]
resolver = "2"
members = [
    "crates/wingman-cli",
    "crates/wingman-config",
    "crates/wingman-core",
    "crates/wingman-tui",
    "crates/wingman-providers",
    "crates/wingman-tools",
    "crates/wingman-session",
    "crates/wingman-rag",
    "crates/wingman-mcp",
    "crates/wingman-skills",
    "crates/wingman-learn",
    "crates/wingman-ts",
    "crates/wingman-autonomous",
    "crates/wingman-lsp",
    "crates/wingman-browser",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/vedantnimbarte/Wingman"
authors = ["wingman contributors"]

[workspace.dependencies]
wingman-cli = { path = "crates/wingman-cli", version = "0.1.0" }
wingman-config = { path = "crates/wingman-config", version = "0.1.0" }
wingman-core = { path = "crates/wingman-core", version = "0.1.0" }
wingman-tui = { path = "crates/wingman-tui", version = "0.1.0" }
wingman-providers = { path = "crates/wingman-providers", version = "0.1.0" }
wingman-tools = { path = "crates/wingman-tools", version = "0.1.0" }
wingman-session = { path = "crates/wingman-session", version = "0.1.0" }
wingman-rag = { path = "crates/wingman-rag", version = "0.1.0", default-features = false }
wingman-mcp = { path = "crates/wingman-mcp", version = "0.1.0" }
wingman-skills = { path = "crates/wingman-skills", version = "0.1.0" }
wingman-learn = { path = "crates/wingman-learn", version = "0.1.0" }
wingman-ts = { path = "crates/wingman-ts", version = "0.1.0", default-features = false }
wingman-autonomous = { path = "crates/wingman-autonomous", version = "0.1.0" }
wingman-lsp = { path = "crates/wingman-lsp", version = "0.1.0" }
wingman-browser = { path = "crates/wingman-browser", version = "0.1.0", default-features = false }

tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "io-util", "process", "signal", "sync", "time"] }
async-trait = "0.1"
futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

thiserror = "1"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

clap = { version = "4", features = ["derive", "env"] }
directories = "5"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }

rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2"

[profile.dev]
# Windows MSVC hits a 4 GB PDB cap (LNK1318) when the workspace grows.
# `line-tables-only` keeps backtraces useful while staying under the limit.
debug = "line-tables-only"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
