[package]
name = "arccode-autonomous"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pilot mode: multi-agent orchestrator that delegates a goal to worker agents in isolated worktrees and converges into a PR."

[dependencies]
arccode-core = { workspace = true }
arccode-config = { workspace = true }
arccode-tools = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
globset = "0.4"
sha2 = { workspace = true }
subtle = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["process", "signal"] }

[dev-dependencies]
tempfile = "3"
