[package]
name = "arccode-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "arccode — a multi-provider terminal coding agent"

[[bin]]
name = "arccode"
path = "src/main.rs"

[dependencies]
arccode-config = { workspace = true }
arccode-core = { workspace = true }
arccode-providers = { workspace = true }
arccode-tools = { workspace = true }
arccode-session = { workspace = true }
arccode-tui = { workspace = true }
arccode-rag = { workspace = true, default-features = false }
arccode-mcp = { workspace = true }
arccode-learn = { workspace = true }
arccode-skills = { workspace = true }
arccode-autonomous = { workspace = true }
arccode-ts = { workspace = true, optional = true }

tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ratatui = "0.29"
crossterm = "0.28"

[features]
default = ["embeddings", "treesitter"]
# Pulls in fastembed-rs + ONNX runtime for real semantic search. Disable
# this to ship a smaller binary that falls back to a deterministic
# hash-based embedder (poor recall but fast and dep-free).
embeddings = ["arccode-rag/embeddings"]
# Pulls in tree-sitter grammars for symbol-aware diff/review annotation,
# semantic chunking, and TUI highlighting.
treesitter = [
    "dep:arccode-ts",
    "arccode-ts/treesitter",
    "arccode-rag/treesitter",
    "arccode-tools/treesitter",
    "arccode-learn/treesitter",
    "arccode-tui/treesitter",
]
