[package]
name = "arccode-learn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Self-improving learning loop for arccode: memory, skill proposals, usage stats, session search."

[dependencies]
arccode-config = { workspace = true }
arccode-core = { workspace = true }
arccode-skills = { workspace = true }
arccode-session = { workspace = true }
arccode-rag = { workspace = true }
arccode-ts = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
default = ["treesitter"]
treesitter = ["dep:arccode-ts", "arccode-ts/treesitter"]

[dev-dependencies]
tokio = { workspace = true }
