[package]
name = "arccode-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) client wrapper for arccode"

[dependencies]
arccode-core = { workspace = true }
arccode-config = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

rmcp = { version = "1", default-features = false, features = ["client", "transport-child-process", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
