[package]
name = "arccode-rag"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Retrieval/embedding/index layer for arccode (Embedder trait, sqlite-vec)"

[dependencies]
arccode-core = { workspace = true }
arccode-config = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

# Filesystem walking + watching
ignore = "0.4"
notify = "6"
notify-debouncer-mini = "0.4"

# Storage
rusqlite = { version = "0.31", features = ["bundled", "blob"] }

# Embeddings (fastembed downloads ONNX models on first use; gated by feature
# so the rest of the workspace builds without ONNX runtime present).
fastembed = { version = "5", optional = true }

# Hashing for change detection
blake3 = "1"

[features]
default = ["embeddings"]
embeddings = ["dep:fastembed"]

