[package]
name = "arccode-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in tools (file/shell/search) for arccode"

[dependencies]
arccode-core = { workspace = true }
arccode-config = { workspace = true }
arccode-rag = { workspace = true, default-features = false }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

ignore = "0.4"
globset = "0.4"
regex = "1"
similar = "2"

