[package]
name = "arccode-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ratatui-based terminal UI for arccode"

[dependencies]
arccode-core = { workspace = true }
arccode-config = { workspace = true }
arccode-skills = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
ignore = "0.4"
nucleo-matcher = "0.3"
