[package]
name = "wingman-browser"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository.workspace = true
description = "Headless-browser visual verification for wingman: capture a URL and diff screenshots against a baseline."

[dependencies]
thiserror = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
# Real headless-Chrome capture is optional: it needs a Chrome/Chromium binary,
# so keep it behind a feature to not force that on every build. The screenshot
# *diff* logic is always available and pure.
headless_chrome = { version = "1", optional = true }

[features]
default = []
chrome = ["dep:headless_chrome"]
