[package]
name = "wingman-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and agent loop for wingman (Provider trait, Message, ToolSpec)"

[dependencies]
wingman-config = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
async-stream = "0.3"
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
