[package]
name = "wingman-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and agent loop for wingman (Provider trait, Message, ToolSpec)"

[dependencies]
wingman-config = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
async-stream = "0.3"
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# rustls (ring) crypto provider install for reqwest's `rustls-no-provider`
# feature — keeps us on ring (no aws-lc-rs/OpenSSL), preserving the static
# binary distribution while unifying every crate on reqwest 0.13.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
