[package]
name = "wingman-lsp"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository.workspace = true
description = "Language Server Protocol client: real go-to-definition, references, diagnostics, hover, and rename backed by rust-analyzer / pyright / typescript-language-server / gopls."

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
