[package]
name = "wingman-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM provider implementations for wingman (Anthropic, OpenAI, Gemini, Ollama)"

[dependencies]
wingman-core = { workspace = true }
wingman-config = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
async-stream = "0.3"
futures = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"
bytes = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
