[package]
name = "wingman-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Session log (JSONL) and compaction/recap for wingman"

[dependencies]
wingman-core = { workspace = true }
wingman-config = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
