[package]
name = "wingman-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Markdown-frontmatter skills loader for wingman"

[dependencies]
wingman-config = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
