[package]
name = "wingman-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in tools (file/shell/search) for wingman"

[dependencies]
wingman-core = { workspace = true }
wingman-config = { workspace = true }
wingman-rag = { workspace = true, default-features = false }
wingman-learn = { workspace = true }
wingman-skills = { workspace = true }
wingman-session = { workspace = true }
wingman-lsp = { workspace = true }
wingman-ts = { workspace = true, optional = true }

tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

ignore = "0.4"
globset = "0.4"
regex = "1"
similar = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
urlencoding = { workspace = true }

[features]
default = ["treesitter"]
treesitter = ["dep:wingman-ts", "wingman-ts/treesitter"]


[dev-dependencies]
tempfile = "3"
