[package]
name = "wingman-ts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Tree-sitter wrappers: language detection, symbol extraction, semantic chunking, outline."

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }

# Tree-sitter and grammars are gated behind the `treesitter` feature so the
# workspace continues to build (and tests run) without the C toolchain
# overhead when callers don't need parsing.
tree-sitter = { version = "0.22", optional = true }
tree-sitter-rust = { version = "0.21", optional = true }
tree-sitter-python = { version = "0.21", optional = true }
tree-sitter-javascript = { version = "0.21", optional = true }
tree-sitter-typescript = { version = "0.21", optional = true }
tree-sitter-go = { version = "0.21", optional = true }
tree-sitter-highlight = { version = "0.22", optional = true }

[features]
default = ["treesitter"]
treesitter = [
    "dep:tree-sitter",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-go",
]
highlight = ["treesitter", "dep:tree-sitter-highlight"]
